--- a/package.json
+++ b/package.json
@@ -5,35 +5,27 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/samples": "~3.0.3",
-    "@expo/vector-icons": "^10.0.3",
-    "@react-navigation/web": "^1.0.0-alpha.9",
     "expo": "^35.0.0",
-    "expo-asset": "^7.0.0",
-    "expo-constants": "^7.0.0",
-    "expo-font": "^7.0.0",
-    "expo-web-browser": "^7.0.0",
-    "firebase": "^7.2.0",
+    "expo-app-auth": "^7.0.0",
+    "expo-file-system": "~7.0.0",
+    "expo-google-app-auth": "^7.0.0",
+    "expo-google-sign-in": "^7.0.0",
+    "expo-keep-awake": "^7.0.0",
+    "firebase": "^7.5.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-cli": "^2.0.1",
-    "react-native-dotenv": "^0.2.0",
-    "react-native-firebase": "^5.5.6",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-native-google-signin": "^2.1.1",
+    "react-native-unimodules": "^0.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^3.13.0"
+    "react-navigation": "^4.0.10"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0",
-    "jest-expo": "^35.0.0"
+    "babel-preset-expo": "^7.1.0"
   },
   "private": true
 }
